Fri Thu 24 16:27:27 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/full-test.sh misc/test-auto.sh misc/full-test-ol.sh(removed):
	- use an "online" version for test

Thu Thu 23 15:53:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/sql2tds.c src/odbc/unittests/earlybind.c:
	* src/odbc/unittests/norowset.c src/odbc/unittests/t0004.c:
	* src/odbc/unittests/tables.c src/tds/data.c src/tds/tds_checks.c:
	- fixes for mssql 2005

Thu Thu 23 13:48:23 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/query.c: partially fix problem with mssql2k5

Thu Thu 23 11:44:32 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/full-test-ol.sh misc/online.pl misc/test-auto.sh:
	- changed online.pl with James hints
	- enable Valgrind tests using online check

Tue Mar 21 15:24:04 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/cursor2.c(aded) src/odbc/unittests/Makefile.am:
	- added test to check errors using cursor on no row statement

Tue Mar 21 13:22:07 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/native.c:
	- applied patch from Richard Krehbiel (cf "ODBC datetime literal issue")

Tue Mar 21 08:49:44 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* configure.in src/dblib/dblib.c:
	- fix declaration after statements

Mon Mar 20 15:28:25 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/bcp.c: fix error in bcp_colfmt

Mon Mar 20 15:00:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/rpc.c:
	- remove some double checks
	- return correct values from CHECK_PARAMETER
	- fix some possible core if dbproc == NULL

Mon Mar 20 09:42:55 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/full-test.sh: added timeout

Sun Mar 19 18:34:47 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/test-auto.sh: fix typo in header
	* src/dblib/dblib.c: remove double checks
