@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<!-- $Id: software.html,v 1.6 2005-05-26 04:57:50 jklowden Exp $ -->
+<!-- $Id: software.html,v 1.7 2006-03-24 17:37:46 jklowden Exp $ -->
 <head>
 <title>FreeTDS.org</title>
 </head>
@@ -32,53 +32,35 @@ Software&nbsp;&nbsp;|&nbsp;
 <tr>
 <td valign="top">
 
-<table summary="">
+<table summary="Distributions">
 <tr bgcolor="#c9c9ff"><td colspan="2">FreeTDS Downloads (C libraries)</td></tr>
 <tr><td>&nbsp;</td></tr>
 <tr><td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/">Ibiblio.org</a></td><td>Main distribution site</td></tr>
 <tr><td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/freetds-stable.tgz">FreeTDS-stable.tgz</a></td><td>Source distribution</td></tr>
-
-<tr>	<td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/redhat/SRPMS/freetds-0.62.1-1.src.rpm">Source RPM</a></td>
-	<td>Linux/Intel source rpm</td></tr>
-<tr>	<td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/redhat/RPMS/freetds-0.62.1-1.i586.rpm">FreeTDS.i386.rpm</a>
-	</td><td>Linux/Intel rpm</td></tr>
-<tr>	<td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/redhat/RPMS/RPMS/freetds-debuginfo-0.62.1-1.i586.rpm">Debug information</a></td>
-	<td>Linux/Intel rpm</td></tr>
-<tr>	<td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/redhat/RPMS/freetds-devel-0.62.1-1.i586.rpm">Headers</a></td>
-	<td>Linux/Intel rpm</td></tr>
-<tr>	<td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/redhat/RPMS/freetds-doc-0.62.1-1.i586.rpm">Documentation</a></td>
-	<td>Linux/Intel rpm</td></tr>
-<tr>	<td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/redhat/RPMS/freetds-unixodbc-0.62.1-1.i586.rpm">unixodbc support</a></td>
-	<td>Linux/Intel rpm</td></tr>
-
-
-<tr><td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/current/freetds-current.tgz">current snapshot</a></td><td>tgz</td></tr>
-
-
-
+<tr><td>Current <a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/release_candidates">Release Candidates</a></td><td>.tar.gz</td></tr>
+<tr><td><a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/current/freetds-current.tgz">Current Snapshot</a></td><td>.tar.gz</td></tr>
 
 <tr><td>&nbsp;</td></tr>
-<tr><td colspan="2">Debian packages and BSD ports are available from those distributions</td></tr>
+<tr><td colspan="2">Debian packages and BSD ports are available from those distributions.  Refer to the User Guide for how to build your own RPM from the source distribution.</td></tr>
 <tr><td>&nbsp;</td></tr>
 <tr bgcolor="#c9c9ff"><td colspan="2">FreeTDS Downloads (Java)</td></tr>
 <tr><td>&nbsp;</td></tr>
-<tr><td valign="top"><a href="ftp://freetds.internetcds.com/pub/freetds_jdbc">FreeTDS/JDBC</a></td><td>A 100% Java JDBC implementation of TDS</td></tr>
-<tr><td valign="top"><a href="http://jtds.sourceforge.net">jTDS</a></td><td>An updated fork of FreeTDS/JDBC</td></tr>
+<tr><td valign="top"><a href="http://jtds.sourceforge.net">jTDS</a></td><td>The jTDS Project</td></tr>
 </table>
 
 </td>
 <td valign="top">
 
-<table summary="">
+<table summary="3rd Party software">
 <tr bgcolor="#c9c9ff"><td colspan="2">Software to Use with FreeTDS</td></tr>
 <tr><td>&nbsp;</td></tr>
 <tr><td valign="top"><a href="http://www.sourceforge.net/projects/sqsh">SQSH</a></td><td>A swiss army knife command line interface to Sybase/SQL Server.  A must-have program.</td></tr>
-<tr><td valign="top"><a href="http://www.mbay.net/~mpeppler/">DBD::Sybase</a></td><td>A DBI module for Perl.</td></tr>
+<tr><td valign="top"><a href="http://www.peppler.org/freeware/dbd-sybase.html">DBD::Sybase</a></td><td>A DBI module for Perl.</td></tr>
 <tr><td valign="top"><a href="http://www.edlsystems.com/shellsql">ShellSQL</a></td><td>Run SQL in Shell Scripts.</td></tr>
 <tr><td valign="top"><a href="http://www.php.net">PHP</a></td><td>PHP has a Sybase API that will work with FreeTDS.</td></tr>
 <tr><td valign="top"><a href="http://www.gnome-db.org">Gnome DB</a></td><td>Gnome DB has a FreeTDS module.</td></tr>
 <tr><td valign="top"><a href="http://panoptic.com/wiki/aolserver/60.html">nsfreetds</a></td><td>FreeTDS module for AOL Server.</td></tr>
-<tr><td valign="top"><a href="http://www.iancharnas.com/projects/mod_auth_tds.html">mod_auth_tds</a></td><td>An apache authentication module using libtds.</td></tr>
+<tr><td valign="top"><a href="http://www.iancharnas.com/docs/projects/mod_auth_tds/">mod_auth_tds</a></td><td>An apache authentication module using libtds.</td></tr>
 <tr><td valign="top"><a href="http://www.warmi.net/sybsql/index.shtml">SybSQL</a></td><td>A Qt-based GUI interface to Sybase.</td></tr>
 <tr><td valign="top"><a href="http://www.iodbc.org">iODBC</a></td><td>A free ODBC driver manager for Unix.</td></tr>
 <tr><td valign="top"><a href="http://www.unixodbc.org">unixODBC</a></td><td>Free ODBC Driver Manager, Drivers &amp; Tools.</td></tr>
@@ -87,6 +69,10 @@ Software&nbsp;&nbsp;|&nbsp;
 </td>
 </tr>
 </table>
-
+<p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+        src="http://www.w3.org/Icons/valid-xhtml10"
+        alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
+  </p>
 </body>
 </html>
